# plasma-textmon

./: .gitignore  MVC.org  README.org  UI.html  UI.org  dataengines.html  dataengines.org  foobar.js  hacking-textmon.html  hacking-textmon.org  index.html  index.org  notes.org  org-mode.css  prelude.html  prelude.org  textmon-0_1-tweak-guide.html  textmon-0_1-tweak-guide.org  ui-basics.html  ui-basics.org
cpu/: metadata.desktop
cpu/contents/code/: main.js
former-dir/: notes.org
former-dir/javascript/cpuload/: metadata.desktop
former-dir/javascript/textmon/: metadata.desktop
former-dir/javascript/textmon_tut/javascript/: loops.js
former-dir/native/basics/hello_world/: plasma-applet-hello_world.desktop
former-dir/native/textmondebug/: plasma-applet-cpuload.desktop
former-dir/native/textmondebug/src/: applet.h
javascript/printf_ftw/: metadata.desktop
javascript/textmon_tut/: kdebug_warnings.dbg
javascript/textmon_tut/hello_world/: metadata.desktop
javascript/textmondebug/: metadata.desktop
mysysguard/: metadata.desktop
mysysguard/contents/code/: foobar.js  helpers.js  internals.js  main.js  mysysguard.js
native/basics/hello_world/: CMakeLists.txt
native/basics/hello_world/src/: plasma-hello_world.h
native/textmondebug/: CMakeLists.txt  Makefile
native/textmondebug/src/: applet.cpp
printf_ftw/contents/code/: printah.js
textmon/: metadata.desktop
textmon/contents/code/: helpers.js  main.js
textmon/contents/ui/: config.ui
textmondebug/contents/code/: main.js
wlan/: metadata.desktop
wlan/contents/code/: main.js
(+6 files in other folders)
